# pgbouncer

./: CMakeLists.txt  Makefile  config.ini  users.txt
include/: admin.h  bouncer.h  iobuf.h  objects.h  sbuf.h  sharding.h
src/: admin.c  client.c  loader.c  main.c  objects.c  sbuf.c  server.c  sharding.c
